--- a/frontend/src/blocks/header/header.css
+++ b/frontend/src/blocks/header/header.css
@@ -4,6 +4,8 @@
   margin: 0 auto;
   font-size: 0px;
   font-weight: 500;
+  display: flex;
+  justify-content: space-between;
   border-bottom: solid 1px rgba(84, 84, 84, 0.7);
 }
 
